--- a/app/src/main/res/layout/activity_add_feed.xml
+++ b/app/src/main/res/layout/activity_add_feed.xml
@@ -20,6 +20,7 @@
             app:hintTextAppearance="@android:style/TextAppearance.Medium">
 
         <android.support.design.widget.TextInputEditText
+                android:id="@+id/et_feed_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -38,6 +39,7 @@
             android:id="@+id/textInputLayout">
 
         <android.support.design.widget.TextInputEditText
+                android:id="@+id/et_feed_url"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
