--- a/app/src/main/res/layout/article_list_row.xml
+++ b/app/src/main/res/layout/article_list_row.xml
@@ -76,19 +76,19 @@
             app:layout_constraintStart_toStartOf="@+id/tv_article_author"
             />
 
-    <ImageView
-            android:id="@+id/iv_arrow_icon"
-            android:background="@drawable/ic_arrow_drop_down"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/image_description"
+    <!--<ImageView-->
+            <!--android:id="@+id/iv_arrow_icon"-->
+            <!--android:background="@drawable/ic_arrow_drop_down"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:contentDescription="@string/image_description"-->
 
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="48dp"
-    />
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--android:layout_marginEnd="8dp"-->
+            <!--android:layout_marginRight="8dp"-->
+            <!--app:layout_constraintTop_toTopOf="parent"-->
+            <!--android:layout_marginTop="48dp"-->
+    <!--/>-->
 
     <TextView
             android:id="@+id/tv_article_preview"
