--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
             android:fitsSystemWindows="true">
 
         <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab_nav"
+                android:id="@+id/nav_fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|bottom"
