--- a/app/src/main/res/layout/article_list_row.xml
+++ b/app/src/main/res/layout/article_list_row.xml
@@ -21,7 +21,6 @@
             android:layout_alignParentTop="true"
             app:layout_constraintStart_toStartOf="parent"
 
-            android:layout_marginLeft="4dp"
             android:layout_marginStart="4dp"
 
             app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +41,6 @@
 
             app:layout_constraintStart_toEndOf="@+id/iv_article_image"
             app:layout_constraintTop_toTopOf="@+id/iv_article_image"
-            android:layout_marginLeft="4dp"
             android:layout_marginStart="4dp"
     />
 
@@ -70,7 +68,6 @@
             tools:text="tv_article_date"
             android:textSize="12sp"
 
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             app:layout_constraintTop_toBottomOf="@+id/tv_article_author"
             app:layout_constraintStart_toStartOf="@+id/tv_article_author"
@@ -85,14 +82,13 @@
 
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="48dp"
 
             android:visibility="invisible"
     />
 
-    <WebView
+    <TextView
             android:id="@+id/wv_article_preview"
             android:layout_width="match_parent"
             android:scrollHorizontally="false"
@@ -105,7 +101,7 @@
             app:layout_constraintTop_toBottomOf="@+id/iv_article_image"
             android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="@+id/iv_article_image"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="@+id/iv_arrow_icon"/>
 
     <Button
@@ -117,9 +113,9 @@
             android:visibility="gone"
 
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_article_preview"
-            app:layout_constraintEnd_toStartOf="@+id/btn_share" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/wv_article_preview"
+            app:layout_constraintEnd_toStartOf="@+id/btn_share"
+            android:layout_marginEnd="8dp"/>
 
     <Button
             android:id="@+id/btn_share"
@@ -130,9 +126,9 @@
 
             android:visibility="gone"
 
-            app:layout_constraintTop_toBottomOf="@+id/tv_article_preview"
+            app:layout_constraintTop_toBottomOf="@+id/wv_article_preview"
             app:layout_constraintEnd_toStartOf="@+id/iv_arrow_icon_up"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+            android:layout_marginEnd="8dp"/>
 
     <ImageView
             android:id="@+id/iv_arrow_icon_up"
@@ -145,8 +141,7 @@
 
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_article_preview"/>
+            app:layout_constraintTop_toBottomOf="@+id/wv_article_preview"/>
 
 </android.support.constraint.ConstraintLayout>
