--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:layout_height="match_parent">
 
     <FrameLayout
             android:id="@+id/content_frame"
@@ -21,7 +19,7 @@
                 android:layout_height="match_parent"
 
                 tools:layoutManager="ConstraintLayoutManager"
-                tools:listitem="@layout/article_list_row"
+                tools:listitem="@layout/article_list_item"
                 tools:itemCount="5"/>
 
         <TextView
@@ -42,12 +40,22 @@
     </FrameLayout>
 
     <android.support.design.widget.NavigationView
-            app:menu="@menu/navigation_view"
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_nav_feeds"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            tools:layoutManager="ConstraintLayoutManager"
+            tools:listitem="@layout/nav_list_item"
+            tools:itemCount="5"/>
+
 
         <android.support.design.widget.FloatingActionButton
                 android:id="@+id/nav_fab"
