--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -12,30 +13,39 @@
             android:layout_height="match_parent"
             tools:context=".MainActivity">
 
-        <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_articles"
-                android:scrollbars="vertical"
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                android:elevation="4dp"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-                tools:layoutManager="ConstraintLayoutManager"
-                tools:listitem="@layout/article_list_item"
-                tools:itemCount="5"/>
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_articles"
+                    android:scrollbars="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
 
-        <TextView
-                android:id="@+id/tv_error_message"
-                android:text="@string/feed_load_error"
-                android:layout_gravity="center"
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                    tools:layoutManager="ConstraintLayoutManager"
+                    tools:listitem="@layout/article_list_item"
+                    tools:itemCount="5"/>
 
-        <ProgressBar
-                android:id="@+id/pb_loading_indicator"
-                android:layout_height="42dp"
-                android:layout_width="42dp"
-                android:layout_gravity="center"
-                android:visibility="visible" />
+            <TextView
+                    android:id="@+id/tv_error_message"
+                    android:text="@string/feed_load_error"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+            <ProgressBar
+                    android:id="@+id/pb_loading_indicator"
+                    android:layout_height="42dp"
+                    android:layout_width="42dp"
+                    android:layout_gravity="center"
+                    android:visibility="visible" />
+
 
     </FrameLayout>
 
@@ -43,8 +53,7 @@
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:fitsSystemWindows="true">
+            android:layout_gravity="start">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_nav_feeds"
