--- a/app/src/main/res/layout/activity_add_feed.xml
+++ b/app/src/main/res/layout/activity_add_feed.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,50 +8,77 @@
         android:layout_height="match_parent"
         tools:context=".AddFeedActivity">
 
-    <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_feed_title"
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            app:title="@string/add_feed"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
-            android:layout_alignParentTop="true"
-            app:layout_constraintStart_toStartOf="parent"
-
-            android:hint="@string/title"
-            app:hintEnabled="true"
-            app:hintTextAppearance="@android:style/TextAppearance.Medium">
-
-        <android.support.design.widget.TextInputEditText
-                android:id="@+id/et_feed_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
+    <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingTop="?android:attr/actionBarSize">
 
-            android:hint="@string/url"
-            app:hintEnabled="true"
-            app:hintTextAppearance="@android:style/TextAppearance.Medium"
-
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/til_feed_title"
-            android:id="@+id/textInputLayout">
-
-        <android.support.design.widget.TextInputEditText
-                android:id="@+id/et_feed_url"
+        <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_feed_title"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
 
-    </android.support.design.widget.TextInputLayout>
+                android:layout_alignParentTop="true"
+                app:layout_constraintStart_toStartOf="parent"
 
-    <Button
-            android:id="@+id/btn_confirm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/confirm"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+                android:hint="@string/title"
+                app:hintEnabled="true"
+                app:hintTextAppearance="@android:style/TextAppearance.Medium">
 
-</android.support.constraint.ConstraintLayout>
+            <android.support.design.widget.TextInputEditText
+                    android:id="@+id/et_feed_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:hint="@string/url"
+                app:hintEnabled="true"
+                app:hintTextAppearance="@android:style/TextAppearance.Medium"
+
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/til_feed_title"
+                android:id="@+id/textInputLayout">
+
+            <android.support.design.widget.TextInputEditText
+                    android:id="@+id/et_feed_url"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+                android:id="@+id/btn_confirm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/confirm"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
+
+        <Button
+                android:id="@+id/btn_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/delete"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+                android:layout_marginStart="8dp"
+
+                android:visibility="gone"/>
+
+    </android.support.constraint.ConstraintLayout>
+</FrameLayout>
