--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -23,9 +22,11 @@
 
             <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_articles"
-                    android:scrollbars="vertical"
+                    android:scrollbars="none"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:paddingTop="?android:attr/actionBarSize"
+                    android:background="@color/colorBackground"
 
                     tools:layoutManager="ConstraintLayoutManager"
                     tools:listitem="@layout/article_list_item"
