--- a/app/src/main/res/layout/article_list_item.xml
+++ b/app/src/main/res/layout/article_list_item.xml
@@ -1,147 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
-        android:backgroundTint="@color/colorAccent"
+
+        card_view:cardBackgroundColor="#E6E6E6"
+        android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:orientation="vertical">
 
-    <ImageView
-            android:id="@+id/iv_article_image"
-            android:src="@mipmap/ic_launcher"
-            android:contentDescription="@string/image_description"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="2dp"
+        card_view:cardCornerRadius="8dp"
+        card_view:cardElevation="4dp">
 
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-
-            android:layout_alignParentTop="true"
-            app:layout_constraintStart_toStartOf="parent"
-
-            android:layout_marginStart="4dp"
-
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="4dp"/>
-
-    <TextView
-            android:id="@+id/tv_article_title"
-            android:layout_width="wrap_content"
-            android:maxWidth="308dp"
-            android:scrollHorizontally="false"
-
-
-            android:layout_height="35dp"
-            android:maxHeight="35dp"
-
-            tools:text="tv_article_title goes here! and goes"
-            android:textStyle="bold"
-
-            app:layout_constraintStart_toEndOf="@+id/iv_article_image"
-            app:layout_constraintTop_toTopOf="@+id/iv_article_image"
-            android:layout_marginStart="4dp"
-    />
-
-    <TextView
-            android:id="@+id/tv_article_author"
-
-            android:layout_width="wrap_content"
-            android:maxWidth="308dp"
-            android:scrollHorizontally="false"
-            android:layout_height="15dp"
-
-            tools:text="tv_article_author"
-            android:textSize="12sp"
-
-            app:layout_constraintTop_toBottomOf="@+id/tv_article_title"
-            app:layout_constraintStart_toStartOf="@+id/tv_article_title"/>
-
-    <TextView
-            android:id="@+id/tv_article_date"
-            android:layout_width="wrap_content"
-            android:maxWidth="308dp"
-            android:scrollHorizontally="false"
-            android:layout_height="wrap_content"
-
-            tools:text="tv_article_date"
-            android:textSize="12sp"
-
-            android:layout_alignParentStart="true"
-            app:layout_constraintTop_toBottomOf="@+id/tv_article_author"
-            app:layout_constraintStart_toStartOf="@+id/tv_article_author"
-            />
-
-    <ImageView
-            android:id="@+id/iv_arrow_icon"
-            android:background="@drawable/ic_arrow_drop_down"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/image_description"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="48dp"
-
-            android:visibility="invisible"
-    />
-
-    <TextView
-            android:id="@+id/wv_article_preview"
+    <android.support.constraint.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:scrollHorizontally="false"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="5dp">
 
-            android:visibility="gone"
+        <ImageView
+                android:id="@+id/iv_article_image"
+                android:src="@mipmap/ic_launcher"
+                android:contentDescription="@string/image_description"
 
-            tools:text="This is the article preview and it could be really long and stuff like that and might even be like totally totally bogus or some shit? I dont fucking know I wish I just used lorem ipsum"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
 
-            app:layout_constraintTop_toBottomOf="@+id/iv_article_image"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="@+id/iv_article_image"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/iv_arrow_icon"/>
+                android:layout_alignParentTop="true"
+                app:layout_constraintStart_toStartOf="parent"
 
-    <Button
-            android:id="@+id/btn_open_browser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/open_in_browser"
+                android:padding="5dp"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-            android:visibility="gone"
+        <TextView
+                android:id="@+id/tv_article_title"
+                android:layout_height="wrap_content"
+                android:maxHeight="90dp"
+                android:layout_width="0dp"
+                android:scrollHorizontally="false"
 
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/wv_article_preview"
-            app:layout_constraintEnd_toStartOf="@+id/btn_share"
-            android:layout_marginEnd="8dp"/>
+                android:maxLines="6"
+                android:ellipsize="end"
 
-    <Button
-            android:id="@+id/btn_share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/share"
-            android:layout_marginTop="8dp"
+                tools:text="Article title thats really long and lie toasd asdoner ef"
+                android:textSize="16sp"
 
-            android:visibility="gone"
+                app:layout_constraintStart_toEndOf="@+id/iv_article_image"
+                app:layout_constraintTop_toTopOf="@+id/iv_article_image"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-            app:layout_constraintTop_toBottomOf="@+id/wv_article_preview"
-            app:layout_constraintEnd_toStartOf="@+id/iv_arrow_icon_up"
-            android:layout_marginEnd="8dp"/>
+        <TextView
+                android:id="@+id/tv_article_author"
 
-    <ImageView
-            android:id="@+id/iv_arrow_icon_up"
-            android:background="@drawable/ic_arrow_drop_up"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/image_description"
+                android:layout_width="wrap_content"
+                android:maxWidth="308dp"
+                android:scrollHorizontally="false"
+                android:layout_height="15dp"
 
-            android:visibility="gone"
+                tools:text="tv_article_author"
+                android:textSize="12sp"
 
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/wv_article_preview"/>
+                app:layout_constraintTop_toBottomOf="@+id/tv_article_title"
+                app:layout_constraintStart_toStartOf="@+id/tv_article_title"/>
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+                android:id="@+id/tv_article_date"
+                android:layout_width="wrap_content"
+                android:maxWidth="308dp"
+                android:scrollHorizontally="false"
+                android:layout_height="wrap_content"
+
+                tools:text="tv_article_date"
+                android:textSize="12sp"
+
+                android:layout_alignParentStart="true"
+                app:layout_constraintTop_toBottomOf="@+id/tv_article_author"
+                app:layout_constraintStart_toStartOf="@+id/tv_article_author"/>
+
+    </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
