--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#397A6B</color>
 
     <color name="colorBackgroundTint">#40397a6b</color>
+    <color name="colorBackground">#e6ece6</color>
 </resources>
